# artificial-non-intelligence-data

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy_on_tag.yml
data/: 500_fake_tweets_aggressive_1.json  500_fake_tweets_nonaggressive_1.json  all_tweets_final.csv  all_tweets_final.json
notebooks/: FINAL_Fine_tuned_GPT2_Tweet_Generation.ipynb  player_analysis.ipynb
scraper/: crawl.py  models.py
scraper/crawlers/: blueprint.py  lefigaro.py  mirror.py  oan.py  valeursactuelles.py
scripts/: import_json.py
