[project]
name = "artificial-non-intelligence-data"
version = "0.2.0"
description = ""
authors = [
    { name = "Adrien Carpentier", email = "moi@adriencarpentier.com" },
    { name = "Philip Lin", email = "philip.lin@gmail.com" },
    { name = "Dilnoza Mirdjalilova", email = "dmirdjalilova@gmail.com" },
]
dependencies = [
    "pandas<2.0.0,>=1.2.4",
    "PyMySQL<2.0.0,>=1.0.2",
    "seaborn<1.0.0,>=0.11.1",
    "streamlit<1.0.0,>=0.88.0",
]
requires-python = ">=3.9,<4.0"
dynamic = ["classifiers", "classifiers"]
license = { text = "MIT" }

[project.urls]
homepage = ""


[tool.poetry]
name = "artificial-non-intelligence-data"
version = "0.2.0"
description = ""
authors = [
    "Adrien Carpentier <moi@adriencarpentier.com>",
    "Philip Lin <philip.lin@gmail.com>",
    "Dilnoza Mirdjalilova <dmirdjalilova@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
PyMySQL = "^1.0.2"
seaborn = "^0.11.1"
streamlit = "^0.88.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.247"


[tool.pdm]
includes = []

[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
